--- a/src/components/Modals/AddedToCartModal/Modal.module.css
+++ b/src/components/Modals/AddedToCartModal/Modal.module.css
@@ -1,24 +1,9 @@
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 100;
+.confirmationDiv {
+  display: flex;
 }
 
-.modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 2rem;
-  border-radius: 8px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-  z-index: 101;
-  min-width: 300px;
+.confirmationDiv * {
+  color: green;
 }
 
 .modal h2 {
