--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,8 +4,9 @@
   align-items: center;
 }
 
-.header > h1 {
-  font-size: 2.6rem;
+.myStoreP {
+  font-size: 2.8rem;
+  font-weight: 700;
   margin: 0 0 0 10px;
 }
 
