--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -12,6 +12,9 @@
 
 .navContainer {
   display: flex;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .navContainer > a {
