--- a/src/components/CartQuantityInput/CartQuantiyInput.module.css
+++ b/src/components/CartQuantityInput/CartQuantiyInput.module.css
@@ -1,5 +1,6 @@
 .quantityInput {
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 0.5rem;
 }
@@ -8,7 +9,7 @@
   padding: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 4px;
-  min-width: 120px;
+  min-width: 70px;
   text-align: center;
   background: white;
 }
