--- a/src/components/OrderSummary/OrderSummary.module.css
+++ b/src/components/OrderSummary/OrderSummary.module.css
@@ -2,15 +2,16 @@
   display: flex;
   flex-direction: column;
   height: 350px;
-  border: 1px solid black;
+  border: 3px solid var(--bg-secondary);
   gap: 15px;
   border-radius: 10px; /* Rounded corners for a modern look */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Soft shadow for depth */
 }
 
 .titleDiv {
-  background-color: beige;
+  background-color: var(--bg-secondary);
 }
+
 .title {
   font-size: 2rem;
   padding: 15px;
