--- a/src/components/CartQuantityInput/CartQuantiyInput.module.css
+++ b/src/components/CartQuantityInput/CartQuantiyInput.module.css
@@ -6,23 +6,21 @@
 }
 
 .inputWrapper {
-  padding: 0.5rem;
+  padding: 0.3rem;
   border: 1px solid #ccc;
   border-radius: 4px;
-  min-width: 70px;
+  min-width: 35px;
   text-align: center;
   background: white;
 }
 
-.inputWrapper span:last-child {
+.inputWrapper span {
   font-weight: bold;
 }
 
 button {
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+  padding: 0.3rem 0.5rem;
+  width: 25px;
 }
 
 button:disabled {
