--- a/src/components/CheckOutCartItem/CheckOutCartItem.module.css
+++ b/src/components/CheckOutCartItem/CheckOutCartItem.module.css
@@ -1,16 +1,19 @@
 .row:not(:first-child) {
-  border-top: 1px black solid;
+  border-top: 1px solid var(--bg-secondary);
 }
 
 .row {
+  display: flex;
+  flex-direction: column;
   animation: fadeIn 0.3s ease-in-out;
   transform-origin: center; /* Make sure the expansion starts from the top */
   overflow: hidden;
+  transition: all 0.3s ease-in-out;
 }
 
 @keyframes fadeIn {
   from {
-    transform: scaleY(0); /* Collapses the row vertically */
+    transform: scaleY(0.4); /* Collapses the row vertically */
     opacity: 0;
   }
   to {
@@ -19,34 +22,40 @@
   }
 }
 
+@keyframes minimize {
+  from {
+    transform: scaleY(1);
+    opacity: 1;
+    max-height: 100px;
+  }
+  to {
+    transform: scaleY(0.4);
+    opacity: 0;
+    max-height: 0;
+  }
+}
+
 .removed {
-  background-color: black;
-  animation: minimize 0.3s forwards; /* Match this duration with setTimeout */
+  animation: minimize 0.3s ease-in-out forwards;
+  pointer-events: none;
 }
 
-.productCell,
-.priceCell,
-.quantityCell,
-.totalCell {
-  padding: 20px;
-  text-align: center;
-  vertical-align: middle;
+.productDiv,
+.quantityDiv,
+.priceDiv,
+.totalDiv {
+  padding: 10px;
 }
 
-.priceCell,
-.totalCell {
+.priceDiv,
+.totalDiv {
   min-width: 20%;
 }
 
 .productImage {
-  height: 20vh;
-  width: auto;
+  width: clamp(80px, 25vw, 120px);
   object-fit: cover;
   margin-right: 16px;
-}
-
-.productCell p {
-  margin: 0 0 0 10px;
 }
 
 .productTitle {
@@ -54,15 +63,39 @@
   margin: 0;
 }
 
-.productCell {
+.productDiv {
   display: flex;
   align-items: center;
-  position: relative;
-  max-width: 450px;
+  width: 100%;
 }
 
-.quantityCell input {
-  width: 20px;
+.productNameRemoveDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-left: 10px;
+}
+
+.bottomDiv {
+  align-self: center;
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.quantityDiv,
+.priceDiv,
+.totalDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.quantityDiv input {
+  /* width: 20px; */
 }
 
 .removeButton {
@@ -73,9 +106,8 @@
   text-decoration: underline;
   cursor: pointer;
   font: inherit;
-  position: absolute;
-  right: 5px;
-  bottom: 5px;
+  width: auto;
+  margin-top: 15px;
 }
 
 .removeButton:hover {
@@ -86,4 +118,10 @@
 .removeButton:focus {
   outline: none;
   text-decoration: none;
+}
+
+@media (min-width: 1200px) {
+  .row {
+    display: contents; /* Makes each row's children occupy the grid */
+  }
 }
