--- a/src/components/OrderSummary/OrderSummary.module.css
+++ b/src/components/OrderSummary/OrderSummary.module.css
@@ -1,19 +1,21 @@
-.orderSummary {
+/* .orderSummary {
   display: flex;
   flex-direction: column;
   height: 350px;
+  background-color: white;
   border: 3px solid var(--bg-secondary);
   gap: 15px;
   border-radius: 10px; /* Rounded corners for a modern look */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Soft shadow for depth */
-}
+/* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Soft shadow for depth */
+/* }  */
 
 .titleDiv {
   background-color: var(--bg-secondary);
 }
 
 .title {
-  font-size: 2rem;
+  text-align: center;
+  font-size: 1.8rem;
   padding: 15px;
 }
 
@@ -24,6 +26,11 @@
   padding: 15px;
 }
 
+.infoDiv p,
+.infoDiv strong {
+  font-size: 1.4rem;
+}
+
 .subtotalDiv,
 .shippingDiv,
 .taxesDiv,
@@ -32,10 +39,9 @@
   justify-content: space-between;
 }
 
-.orderSummary p,
-.orderSummary strong,
 .checkoutButton {
-  font-size: 1.4rem;
+  font-size: 1.5rem;
+  margin: 5px 0 15px 0;
 }
 
 .checkoutButton {
