--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,7 @@
   font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
+  font-size: 14px;
 }
 
 * {
@@ -46,7 +47,7 @@ ul {
 
 #root {
   display: grid;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   grid-template-rows: auto 1fr auto;
   padding: 0;
 }
@@ -84,7 +85,6 @@ button {
   background-color: var(--button-bg);
   color: var(--text-light);
   border: none;
-  padding: 0.5rem 1rem;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.2s ease;
@@ -111,7 +111,7 @@ header {
 }
 
 main {
-  width: 100%;
+  width: 100vw;
   display: flex;
   justify-content: center;
 }
