--- a/src/pages/CheckOut/CheckOut.module.css
+++ b/src/pages/CheckOut/CheckOut.module.css
@@ -1,59 +1,74 @@
 .checkoutPageContainer {
   display: flex;
+  flex-direction: column;
   align-items: center;
   gap: 40px;
   margin: 50px 0 50px 0;
+  width: 90%;
 }
 
 .shoppingCartContainer {
-  min-width: 1000px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
+/* 
+make larger at media query */
 .shoppingCartContainer h1 {
   color: var(--text-primary);
-  font-size: 2.3rem;
+  text-align: center;
+  font-size: 2rem;
   margin: 0 0 20px 0;
 }
 
-.tableWrapper {
-  border-radius: 10px;
+.quantityHeader,
+.priceHeader,
+.totalHeader {
+  display: none;
+}
+
+.checkoutGrid {
+  width: clamp(280px, 100%, 500px);
+  background-color: white;
   border: 3px solid var(--bg-secondary);
-  overflow: hidden; /* contains the table */
+  border-radius: 10px; /* Rounded corners for a modern look */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  font-size: 1.2rem;
 }
 
-.checkoutTable {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.checkoutTable thead {
-  height: 50px;
+.gridHeaderRow div {
   background-color: var(--bg-secondary);
-  border-bottom: none;
 }
 
-.checkoutTable thead * {
-  font-size: 1.5rem;
-}
-
-.checkoutTable th:first-child {
-  width: 450px;
-}
-
-.checkoutTableBody p,
-.checkoutTableBody button,
-.checkoutTableBody span,
-.checkoutTableBody strong {
-  font-size: 1.3rem;
-}
-
-.input::-webkit-outer-spin-button,
-.input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+.gridHeaderRow h3 {
+  text-align: center;
+  font-weight: bold;
+  padding: 10px;
+  font-size: 1.7rem;
 }
 
 .orderSummary {
-  min-width: 400px;
+  width: clamp(280px, 100%, 350px);
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border: 3px solid var(--bg-secondary);
+  border-radius: 10px; /* Rounded corners for a modern look */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Soft shadow for depth */
+}
+
+@media (min-width: 1200px) {
+  .checkoutGrid {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr; /* Adjust as needed */
+  }
+  .gridHeaderRow {
+    grid-column: 1 / -1;
+    display: contents;
+  }
+  .checkoutGridBody {
+    display: contents; /* Keeps grid layout for all children */
+  }
 }
