--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,9 @@
   font-family: 'Montserrat', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
+}
+
+html {
   font-size: 14px;
 }
 
@@ -47,7 +50,7 @@ ul {
 
 #root {
   display: grid;
-  /* min-height: 100vh; */
+  min-height: 100vh;
   grid-template-rows: auto 1fr auto;
   padding: 0;
 }
@@ -177,4 +180,16 @@ dark mode?? */
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
   z-index: 101;
   min-width: 300px;
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 16px; /* 1rem = 16px */
+  }
+}
+
+@media (min-width: 1024px) {
+  html {
+    font-size: 18px; /* 1rem = 18px */
+  }
 }
