--- a/src/components/CartQuantityInput/CartQuantiyInput.module.css
+++ b/src/components/CartQuantityInput/CartQuantiyInput.module.css
@@ -9,7 +9,7 @@
   padding: 0.3rem;
   border: 1px solid #ccc;
   border-radius: 4px;
-  min-width: 35px;
+  min-width: 4rem;
   text-align: center;
   background: white;
 }
