--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,15 +1,43 @@
 .homeContainer {
+  width: 100%;
+  height: 100vh;
+  background-color: var(--white-smoke);
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
-  margin-top: 70px;
+  gap: 2rem;
+  position: relative;
 }
 
-.homeContainer p {
-  max-width: 300px;
-  text-align: center;
+.introDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 400px;
+  align-items: flex-start;
+  padding: 1rem;
+  gap: 0.5rem;
+  border-radius: 1rem;
+  background-color: black;
+  padding: 1rem;
 }
 
-.shopLink {
-  color: red;
+.introDiv * {
+  font-size: 1.5rem;
+}
+
+.introDiv button {
+  width: 8rem;
+}
+
+@media (min-width: 500px) {
+  .homeContainer {
+    display: block;
+  }
+  .introDiv {
+    position: absolute;
+    right: 60%;
+    bottom: 15%;
+  }
 }
