--- a/src/components/Modals/AddedToCartModal/AddedToCartModal.module.css
+++ b/src/components/Modals/AddedToCartModal/AddedToCartModal.module.css
@@ -20,17 +20,15 @@
   margin-top: 1.5rem;
 }
 
-.closeButton,
-.checkoutButton {
+.modal .closeButton,
+.modal .checkoutButton {
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   transition: opacity 0.2s ease;
+  width: 18rem;
 }
-/* 
-.closeButton {
-} */
 
 .checkoutButton {
   /* background-color: var(--color-navy); */
