--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,6 +1,5 @@
 .homeContainer {
   width: 100%;
-  height: 100vh;
   background-color: var(--white-smoke);
   display: flex;
   flex-direction: column;
@@ -8,6 +7,18 @@
   align-items: center;
   gap: 2rem;
   position: relative;
+}
+
+.welcomeDiv {
+  background-color: rgba(10, 10, 10, 0.8);
+  padding: 1rem;
+  position: absolute;
+  top: 10%;
+  left: 20%;
+}
+
+.welcomeDiv h1 {
+  color: white;
 }
 
 .introDiv {
@@ -18,8 +29,7 @@
   align-items: flex-start;
   padding: 1rem;
   gap: 0.5rem;
-  border-radius: 1rem;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.8);
   padding: 1rem;
 }
 
