--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,7 +9,7 @@
 }
 
 .shopFastP {
-  font-size: 2.5rem;
+  font-size: 2.3rem;
   font-weight: 700;
   text-wrap: wrap;
   display: flex;
@@ -26,7 +26,7 @@
 }
 
 .navContainer > a {
-  font-size: 2rem;
+  font-size: 1.7rem;
   display: flex;
   padding: 0.5rem;
 }
@@ -38,7 +38,7 @@
 
 .cartMenuDiv {
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
   position: relative;
   padding: 0.5rem;
 }
@@ -116,6 +116,11 @@
 .cartQuantityWrapper p {
   justify-self: center;
   align-self: center;
+}
+
+.cartIconContainer svg {
+  width: 2.8rem;
+  height: 2.8rem;
 }
 
 .cartP {
