--- a/src/index.css
+++ b/src/index.css
@@ -107,7 +107,7 @@ p {
 
 header {
   position: sticky;
-  min-height: 100px;
+  min-height: 4rem;
   width: 100%;
   top: 0;
   z-index: 1000;
@@ -120,25 +120,9 @@ main {
 }
 
 footer {
-  min-height: 100px;
+  min-height: 4rem;
   width: 100%;
 }
-
-/* 
-dark mode?? */
-/* 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
 
 .star-full {
   color: gold;
@@ -179,11 +163,11 @@ dark mode?? */
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
   z-index: 101;
-  max-width: 310px;
+  width: clamp(250px, 90%, 400px);
 }
 
 .modal h2 {
-  font-size: 2.1rem;
+  font-size: 1.8rem;
   margin-bottom: 1rem;
 }
 
@@ -219,7 +203,7 @@ dark mode?? */
     font-size: 16px; /* 1rem = 16px */
   }
   .modal {
-    max-width: none;
+    width: clamp(300px, 50%, 500px);
   }
 }
 
