--- a/src/pages/Item/Item.module.css
+++ b/src/pages/Item/Item.module.css
@@ -37,8 +37,13 @@
 }
 
 .descriptionDiv strong {
+  font-size: 1.4rem;
   align-self: start;
   margin: 0 0 0.5rem 0;
+}
+
+.descriptionDiv p {
+  font-size: 1.2rem;
 }
 
 .itemInfoDiv {
@@ -58,7 +63,7 @@
 }
 
 .titlePriceRatingDiv h3 {
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 
 .starRating {
@@ -68,7 +73,7 @@
 }
 
 .starRating {
-  --star-size: 2rem;
+  --star-size: 1.5rem;
   margin-bottom: 20px;
 }
 
@@ -79,12 +84,12 @@
 .starRating span:last-child {
   font-size: calc(var(--star-size) * 0.7);
   position: relative;
-  top: 4px;
+  top: 0.2rem;
 }
 
 .titlePriceRatingDiv p,
 .titlePriceRatingDiv input {
-  font-size: 2rem;
+  font-size: 1.3rem;
 }
 
 .cartActionsContainer {
@@ -97,7 +102,7 @@
 
 .cartActionsContainer button {
   width: 3rem;
-  height: 2.5rem;
+  height: 2.3rem;
 }
 
 .cartActionsContainer input {
@@ -105,7 +110,7 @@
 }
 
 .cartQuantityDiv {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .quantityDiv {
@@ -128,7 +133,7 @@
 
 .buttonDiv button {
   width: 10rem;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
 }
 
 .displayPriceP {
@@ -147,6 +152,6 @@
     flex-direction: row;
   }
   .imageDiv {
-    width: clamp(450px, 70%, 700px);
+    width: clamp(400px, 70%, 550px);
   }
 }
